another quick fix with improper element id being read with jQuerry resulting in div not being given "active" class

--- a/floor_search/templates/crawler_view.html
+++ b/floor_search/templates/crawler_view.html
@@ -5,7 +5,7 @@
     <script src="{% static "js/rm_active_cls.js" %}"></script>
     <script>
         $(document).ready(function () {
-            $('#products').addClass('active')
+            $('#run_spider').addClass('active')
         });
     </script>
 {% endblock %}
